<resources>
    <string name="app_name">PetSpeed</string>
    <string name="title_activity_register_endereco">activity_register_endereco</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_act">Bem vindo, %1$s</string>
    <string name="las_access_act">Ultimo acesso em %1$s</string>

    <!-- STRINGS TELA ENDERECO -->
    <string name="nome_rua_end">Nome da Rua</string>
    <string name="bairro_end">Bairro</string>
    <string name="cep_end">CEP(só números)</string>
    <string name="numero_end">Número</string>
    <string name="complemento_end">Complemento</string>
    <string name="cidade_end">Cidade</string>
    <string name="uf_end">UF</string>


    <!-- STRINGS TELA MEDICO -->
    <!--
    <string name="title_activity_home_medico">HomeMedicoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login_activityas">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
-->

    <string name="title_activity_cliente_home">ClienteHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pets">Meus Pets</string>
    <string name="menu_historico">Histórico</string>
    <string name="menu_atendimento_emergencial">Atendimento Emergencial</string>
    <string name="menu_atendimento">Atendimento</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_send">Send</string>
    <string name="menu_configuracoes">Configuracoes</string>
    <string name="nav_header_usuario">Usuario</string>
    <string name="nav_header_email">Usuario@email.com</string>
    <string name="title_activity_home_cliente">HomeClienteActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="title_activity_home_client1">HomeClient1</string>
    <string name="title_activity_home_cliente_maps">Map</string>
    <string name="title_activity_home_cliente_drawer">homeClienteDrawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_animal_cliente">AnimalClienteActivity</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBhntuU8NDLx8ZoIIfxnNRXaziGPvtEB6s</string>
    <string name="CloudApiKey">AIzaSyBhntuU8NDLx8ZoIIfxnNRXaziGPvtEB6s</string>
    <string name="raca">Raça</string>
    <string name="nascimento">Idade</string>
    <string name="peso_kg">Peso kg</string>
    <string name="nome">Nome</string>
    <string name="todo">TODO</string>
    <string name="SQL_SELECT_ALL_FROM">SELECT * FROM</string>
    <string name="SQL_WHERE">WHERE</string>
    <string name="busque_um_medico">Busque um médico</string>
    <string name="title_activity_selecionar_sintomas">SelecionarSintomasActivity</string>
    <string name="title_activity_status_os_cliente">StatusOsCliente</string>
    <string name="title_activity_confirmar_osactiviry">ConfirmarOSActiviry</string>
    <string name="title_activity_historico_os_cliente">HistoricoOsClienteActivity</string>
    <string name="title_activity_finalizar_atendimento">FinalizarAtendimentoActivity</string>
    <string name="title_activity_view_sintomas_animal_acitivity">ViewSintomasAnimalAcitivity
    </string>


</resources>
