<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="Perfil">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

    <item android:title="Meu Perfil">
        <menu>
            <item
                android:id="@+id/nav_ver_perfil"
                android:title="Ver perfil" />
            <item
                android:id="@+id/nav_send"
                android:title="Alterar perfil" />
        </menu>
    </item>

</menu>
