<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.gui.MeusPetsActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        tools:ignore="MissingConstraints">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/campo_raca"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/campo_nome"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/raca"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/campo_fotoPet"
                app:layout_constraintTop_toBottomOf="@+id/campo_nome" />

            <TextView
                android:id="@+id/campo_idade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/campo_nome"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/idade"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/campo_fotoPet"
                app:layout_constraintTop_toBottomOf="@+id/campo_raca" />

            <TextView
                android:id="@+id/campo_peso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/campo_nome"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/peso_kg"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/campo_fotoPet"
                app:layout_constraintTop_toBottomOf="@+id/campo_idade" />

            <TextView
                android:id="@+id/campo_nome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/nome"
                android:textColor="#02A95A"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/campo_fotoPet"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/campo_fotoPet"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>